--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -32,7 +32,7 @@
   --bs-light: #f8f9fa;
   --bs-dark: #212529;
   --bs-primary-rgb: 79, 140, 129;
-  --bs-secondary-rgb: 45, 79, 110;
+  --bs-secondary-rgb: #D9D9D9;
   --bs-success-rgb: 25, 135, 84;
   --bs-info-rgb: 13, 202, 240;
   --bs-warning-rgb: 255, 193, 7;
@@ -2834,20 +2834,20 @@ textarea.form-control-lg {
 }
 
 .btn-primary {
-  --bs-btn-color: #fff;
-  --bs-btn-bg: rgba(79, 140, 129, 1);
-  --bs-btn-border-color: rgba(79, 140, 129, 1);
-  --bs-btn-hover-color: #fff;
-  --bs-btn-hover-bg: #326D63;
-  --bs-btn-hover-border-color: #326D63;
+  --bs-btn-color: rgb(0, 0, 0);
+  --bs-btn-bg: #ffffff;
+  --bs-btn-border-color: #106c2c;
+  --bs-btn-hover-color: rgb(0, 0, 0);
+  --bs-btn-hover-bg: #629b7162;
+  --bs-btn-hover-border-color: #124923;
   --bs-btn-focus-shadow-rgb: 246, 122, 88;
   --bs-btn-active-color: #8aaaa5;
-  --bs-btn-active-bg: #326D63;
-  --bs-btn-active-border-color: #326D63;
+  --bs-btn-active-bg: #c7c7c7;
+  --bs-btn-active-border-color: #c7c7c7;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
   --bs-btn-disabled-color: #fff;
-  --bs-btn-disabled-bg: rgba(79, 140, 129, 1);
-  --bs-btn-disabled-border-color: rgba(79, 140, 129, 1);
+  --bs-btn-disabled-bg: #aaaaaa;
+  --bs-btn-disabled-border-color: #aaaaaa;
 }
 
 .btn-secondary {
