--- a/css/style.css
+++ b/css/style.css
@@ -24,11 +24,10 @@ body {
 }
 
 header.hero {
-  background: url("../assets/img/background.webp");
-  background-position: center;
+  background-position: right bottom;
   background-repeat: no-repeat;
   background-attachment: scroll;
-  background-size: cover;
+  background-size: 50%;
 }
 
 header.hero h1 {
@@ -146,7 +145,7 @@ iframe {
     font-size: calc(1.375rem + 1.5vw) !important;
   }
   header.hero {
-    background: url("../assets/img/background-mobile.webp");
+    background: #ffffff;
     background-position: right bottom;
     background-size: cover;
     background-repeat: no-repeat;
