--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -31,8 +31,9 @@
   --bs-danger: #dc3545;
   --bs-light: #f8f9fa;
   --bs-dark: #212529;
-  --bs-primary-rgb: 79, 140, 129;
-  --bs-secondary-rgb: #D9D9D9;
+  --bs-primary-rgb: #ffffff;
+  --bs-secondary-rgb: #f50202;
+  --bs-text-opacity: 1;
   --bs-success-rgb: 25, 135, 84;
   --bs-info-rgb: 13, 202, 240;
   --bs-warning-rgb: 255, 193, 7;
@@ -2835,13 +2836,13 @@ textarea.form-control-lg {
 
 .btn-primary {
   --bs-btn-color: rgb(0, 0, 0);
-  --bs-btn-bg: #ffffff;
-  --bs-btn-border-color: #106c2c;
+  --bs-btn-bg: #D9D9D9;
+  --bs-btn-border-color: #D9D9D9;
   --bs-btn-hover-color: rgb(0, 0, 0);
-  --bs-btn-hover-bg: #629b7162;
-  --bs-btn-hover-border-color: #124923;
+  --bs-btn-hover-bg: #d9d9d96e;
+  --bs-btn-hover-border-color: #D9D9D9;
   --bs-btn-focus-shadow-rgb: 246, 122, 88;
-  --bs-btn-active-color: #8aaaa5;
+  --bs-btn-active-color: #616161;
   --bs-btn-active-bg: #c7c7c7;
   --bs-btn-active-border-color: #c7c7c7;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
@@ -2851,10 +2852,10 @@ textarea.form-control-lg {
 }
 
 .btn-secondary {
-  --bs-btn-color: rgba(79, 140, 129, 1);
-  --bs-btn-bg: #fff;
-  --bs-btn-border-color: rgba(79, 140, 129, 1);
-  --bs-btn-hover-color: rgba(79, 140, 129, 1);
+  --bs-btn-color: rgb(79, 140, 79);
+  --bs-btn-bg: rgb(230, 230, 230);
+  --bs-btn-border-color: rgb(192, 192, 192);
+  --bs-btn-hover-color: rgb(79, 140, 79);
   --bs-btn-hover-bg: #e9e9e9;
   --bs-btn-hover-border-color: rgba(79, 140, 129, 1);
   --bs-btn-focus-shadow-rgb: 130, 138, 145;
