--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -2836,10 +2836,10 @@ textarea.form-control-lg {
 
 .btn-primary {
   --bs-btn-color: rgb(0, 0, 0);
-  --bs-btn-bg: #D9D9D9;
+  --bs-btn-bg: #ececec;
   --bs-btn-border-color: #D9D9D9;
   --bs-btn-hover-color: rgb(0, 0, 0);
-  --bs-btn-hover-bg: #d9d9d96e;
+  --bs-btn-hover-bg: #f0f0f0;
   --bs-btn-hover-border-color: #D9D9D9;
   --bs-btn-focus-shadow-rgb: 246, 122, 88;
   --bs-btn-active-color: #616161;
@@ -2852,8 +2852,8 @@ textarea.form-control-lg {
 }
 
 .btn-secondary {
-  --bs-btn-color: rgb(79, 140, 79);
-  --bs-btn-bg: rgb(230, 230, 230);
+  --bs-btn-color: rgb(67, 117, 67);
+  --bs-btn-bg: rgb(240, 240, 240);
   --bs-btn-border-color: rgb(192, 192, 192);
   --bs-btn-hover-color: rgb(79, 140, 79);
   --bs-btn-hover-bg: #e9e9e9;
