--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -23,7 +23,7 @@
   --bs-gray-700: #495057;
   --bs-gray-800: #343a40;
   --bs-gray-900: #212529;
-  --bs-primary: #4F8C81;
+  --bs-primary: #3C9FAC;
   --bs-secondary: #2D4F6E;
   --bs-success: #198754;
   --bs-info: #0dcaf0;
@@ -2835,16 +2835,16 @@ textarea.form-control-lg {
 }
 
 .btn-primary {
-  --bs-btn-color: rgb(0, 0, 0);
-  --bs-btn-bg: #ececec;
-  --bs-btn-border-color: #D9D9D9;
-  --bs-btn-hover-color: rgb(0, 0, 0);
-  --bs-btn-hover-bg: #f0f0f0;
-  --bs-btn-hover-border-color: #D9D9D9;
+  --bs-btn-color: #06101cdd;
+  --bs-btn-bg: #ffffff;
+  --bs-btn-border-color: #16818E;
+  --bs-btn-hover-color: rgb(255, 255, 255);
+  --bs-btn-hover-bg: #1f8997;
+  --bs-btn-hover-border-color: #16808ed2;
   --bs-btn-focus-shadow-rgb: 246, 122, 88;
-  --bs-btn-active-color: #616161;
-  --bs-btn-active-bg: #c7c7c7;
-  --bs-btn-active-border-color: #c7c7c7;
+  --bs-btn-active-color: #dedede;
+  --bs-btn-active-bg: #004F59;
+  --bs-btn-active-border-color: #004F59;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
   --bs-btn-disabled-color: #fff;
   --bs-btn-disabled-bg: #aaaaaa;
@@ -2852,16 +2852,16 @@ textarea.form-control-lg {
 }
 
 .btn-secondary {
-  --bs-btn-color: rgb(67, 117, 67);
-  --bs-btn-bg: rgb(240, 240, 240);
-  --bs-btn-border-color: rgb(192, 192, 192);
-  --bs-btn-hover-color: rgb(79, 140, 79);
-  --bs-btn-hover-bg: #e9e9e9;
-  --bs-btn-hover-border-color: rgba(79, 140, 129, 1);
+  --bs-btn-color: #fff;
+  --bs-btn-bg: #005f6c;
+  --bs-btn-border-color: #004F59;
+  --bs-btn-hover-color: #fff;
+  --bs-btn-hover-bg: #00464f;
+  --bs-btn-hover-border-color: #00373e;
   --bs-btn-focus-shadow-rgb: 130, 138, 145;
-  --bs-btn-active-color: rgba(79, 140, 129, 1);
-  --bs-btn-active-bg: #d4d4d4;
-  --bs-btn-active-border-color: rgba(79, 140, 129, 1);
+  --bs-btn-active-color: #365c66;
+  --bs-btn-active-bg: #002e34;
+  --bs-btn-active-border-color: #00373e;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
   --bs-btn-disabled-color: #fff;
   --bs-btn-disabled-bg: #6c757d;
